[tool.poetry]
name = "justetf-scraping"
version = "0.1.0"
description = "Scrape the [justETF](https://www.justetf.com)"
authors = ["Alexander Druz <alexandersdruz@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "justetf_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
pandas = ">=2.0.0"
notebook = { version = ">=7.0.0", optional = true }
seaborn = { version = "*", optional = true }
pycountry = "^23.12.11"

[tool.poetry.extras]
exploration = ["notebook", "seaborn"]
all = ["notebook", "seaborn"]

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"
types-requests = "*"
pandas-stubs = "*"

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
