[project]
name = "justetf-scraping"
version = "0.1.0"
description = "Scrape the [justETF](https://www.justetf.com)"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Alexander Druz", email = "alexandersdruz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.0.0",
    "pandas>=2.0.0",
    "pycountry",
    "requests>=2.0.0",
    "websocket-client",
]

[project.optional-dependencies]
exploration = [
    "notebook",
    "seaborn",
]
all = [
    "notebook",
    "seaborn",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/ for more
extend-select = ["A", "ANN", "B", "D1", "I", "N"]

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
